# AniScope

./: README.md  ethoscope_bottom.stl  ethoscope_cam.3mf  ethoscope_cam.scad  ethoscope_cam.stl  ethoscope_magnet_test.stl  ethoscope_modules.scad  ethoscope_render.scad  ethoscope_render.stl  misc.scad  pyproject.toml  tube_stand_top.3mf  tube_stand_top.scad  tube_stand_top.stl
3mf/: ethoscope_bottom.3mf  ethoscope_magnet_test.3mf  ethoscope_top.3mf  ethoscope_tube_arena.3mf  ethoscope_x_mount.3mf  tube_stand_top.3mf  usb_camera_mount.3mf
hardware/3mf/: camera_mount_rpi.3mf  ethoscope_abax_arena.3mf  ethoscope_abax_floor.3mf  ethoscope_abax_tube_kit.3mf  ethoscope_arena_spacer.3mf  ethoscope_cam.3mf  ethoscope_neopixel_adapter.3mf  ethoscope_neopixel_lid.3mf  ethoscope_plug.3mf  ethoscope_plug_abax.3mf  hose_connectors.3mf
hardware/gcode/: ethoscope_abax_tube_kit_0.6n_0.15mm_PLA_MK3S_1h15m.gcode
hardware/scad/: ethoscope_adapters.scad  ethoscope_arena_empty.scad  ethoscope_arenas.scad  ethoscope_assembly.json  ethoscope_assembly.scad  ethoscope_base.scad  ethoscope_cam.scad  ethoscope_modules.scad  ethoscope_render.scad  ethoscope_tube_plug.scad  ethoscope_tube_stand.scad  ethoscope_tubes.scad  ethoscope_xmount.scad  (+3 more)
scad/: ethoscope_arena_empty.scad  ethoscope_arena_tubes.scad  ethoscope_arena_vertical.scad  ethoscope_arenas.scad  ethoscope_render.scad  ethoscope_top.scad  tube_stand.scad  tube_stand_2.scad
stl/: cam_mount_rpi.stl  ethoscope_arena_spacer.stl  ethoscope_neopixel_adapter.stl  ethoscope_pref_chamber.stl  ethoscope_top.stl  ethoscope_tube_arena.stl
(+14 files in other folders)
