[tool.poetry]
name = "ethoscope"
version = "0.1.0"
description = ""
authors = ["Mikkel Roald-Arbøl <github.ggb9a@simplelogin.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mkdocs-material = "^9.1.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
